Updated On Navigation.html

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   </header>
   
   <nav id="cipherNav">
-    <button class="btn-tab" onclick="showCipher('caesar')" class="active">Caesar</button>
-    <button class="btn-tab" onclick="showCipher('mono')">Monoalphabetic</button>
-    <button class="btn-tab" onclick="showCipher('playfair')">Playfair</button>
-    <button class="btn-tab" onclick="showCipher('hill')">Hill</button>
-    <button class="btn-tab" onclick="showCipher('poly')">Polyalphabetic</button>
-    <button class="btn-tab" onclick="showCipher('rail')">Rail Fence</button>
+    <button class="btn-tab" onclick="showCipher('caesar', event)">Caesar</button>
+    <button class="btn-tab" onclick="showCipher('mono', event)">Monoalphabetic</button>
+    <button class="btn-tab" onclick="showCipher('playfair', event)">Playfair</button>
+    <button class="btn-tab" onclick="showCipher('hill', event)">Hill</button>
+    <button class="btn-tab" onclick="showCipher('poly', event)">Polyalphabetic</button>
+    <button class="btn-tab" onclick="showCipher('rail', event)">Rail Fence</button>
   </nav>
 </div>
 
@@ -104,3 +104,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
