--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
   <!-- RSA Cipher -->
   <div class="cipher-section" id="rsa">
-    <h2>RSA Cipher (Educational)</h2>
+    <h2>RSA Cipher</h2>
     <div class="rsa-key-section">
       <div class="key-controls">
         <button class="btn" onclick="rsaGenerateKeys()">Generate Keys</button>
@@ -160,4 +160,5 @@
 <script src="script.js"></script>
 </body>
       </html>
+
 
